fix(component of icon): fix the vertical align of button icon with button text

--- a/src/components/common/index.css
+++ b/src/components/common/index.css
@@ -3,3 +3,6 @@
   vertical-align: top;
   line-height: inherit !important;
 }
+.uv-icon-info {
+  z-index: 1;
+}
